[package]
name = "cafe-shader"
version = "0.1.0"
authors = ["29th-Day"]
edition = "2024"
license-file = "LICENSE"
keywords = ["wiiu", "homebrew", "shader"]

[lib]
proc-macro = true

[dependencies]
cafe-sys = { version = "*", path = "../cafe-sys" }
binrw = "0.15"
syn = "2.0.117"
quote = "1.0.45"
proc-macro2 = "1.0.106"
